# lc3-emulator

./: .gitignore  Cargo.toml  LICENSE  README.md  build_web.sh  index.html  some.asm  styles.css  test.asm
.devcontainer/: devcontainer.json
.zed/: debug.json
docs/: intructions.md
lc3/: Cargo.toml
lc3-cli/: Cargo.toml
lc3-cli/src/: cli.rs  main.rs  stdio.rs
lc3-web/: Cargo.toml
lc3-web/pkg/: lc3_web.d.ts  lc3_web.js  lc3_web_bg.wasm  lc3_web_bg.wasm.d.ts  package.json
lc3-web/src/: before.js  highlight.rs  lib.rs  main.js  mod.js  mod.rs  script.js  web_main.rs  webio.rs  webvm.rs
lc3-web/styles/: styles.css
lc3/src/: io.rs  lib.rs
lc3/src/asm/: asm.rs  asm_error.rs  asm_ins.rs  directive.rs  mod.rs  semantic.rs  syntax.rs  token.rs
lc3/src/vm/: instructions.rs  memory.rs  registers.rs  trap.rs  vm.rs
page/: index.html  styles.css
samples/: bad.asm  hello_world.asm  in.asm  some.asm
src/: cli.rs  io.rs  lib.rs  main.rs  output.rs
src/asm/: asm.rs  asm_error.rs  asm_ins.rs  directive.rs  file.rs  lexer.rs  semantic.rs  syntax.rs
src/vm/: instructions.rs  io.rs  memory.rs  mod.rs  registers.rs  trap.rs  vm.rs
src/web/: before.js  highlight.rs  main.js  mod.js  web_main.rs
