[package]
name = "lc3-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
lc3 = {path = "../lc3", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
tsify = "0.4.5"
typetag = "0.2.21"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = [
  "Window",
  "Document",
  "HtmlTextAreaElement",
] }
