[package]
name = "lc3"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"], optional = true }
tsify = { version = "0.4.5", optional = true }
typetag = { version = "0.2.21", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }

[features]
serde = ["dep:serde", "dep:tsify", "dep:typetag", "dep:wasm-bindgen"]
